# ChangeLog for dev-cpp/libbinio
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libbinio/ChangeLog,v 1.12 2006/02/19 18:30:12 hansmi Exp $

  19 Feb 2006; Michael Hanselmann <hansmi@gentoo.org> libbinio-1.4.ebuild:
  Added to ~ppc64.

*libbinio-1.4 (07 Jan 2006)

  07 Jan 2006; Michał Januszewski <spock@gentoo.org> +libbinio-1.4.ebuild:
  Version bump.

  19 Sep 2005; Mark Loeser <halcy0n@gentoo.org> metadata.xml:
  Adding to cpp herd.

  01 Apr 2005; <blubb@gentoo.org> libbinio-1.3.ebuild:
  stable on amd64

  12 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org> libbinio-1.3.ebuild:
  Stable on sparc

  12 Jan 2005; Michal Januszewski <spock@gentoo.org> libbinio-1.3.ebuild:
  Stable on x86.

  04 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  libbinio-1.2.ebuild:
  Stable amd64 and sparc.

*libbinio-1.3 (10 Sep 2004)

  10 Sep 2004; Michal Januszewski <spock@gentoo.org> libbinio-1.2.ebuild,
  +libbinio-1.3.ebuild:
  Version bump. Marked 1.2 stable on x86.

  01 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org> libbinio-1.2.ebuild:
  Added ~amd64 ~sparc.

  21 Jul 2004; David Holm <dholm@gentoo.org> libbinio-1.2.ebuild:
  Added to ~ppc.

*libbinio-1.2 (20 Jul 2004)

  20 Jul 2004; Michal Januszewski <spock@gentoo.org> +metadata.xml,
  +libbinio-1.2.ebuild:
  Initial commit.
