@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/rudiments/rudiments-0.27.ebuild,v 1.1 2005/01/01 04:49:47 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/rudiments/rudiments-0.27.ebuild,v 1.2 2006/02/20 07:33:19 halcy0n Exp $
 
 DESCRIPTION="C++ class library for daemons, clients and servers"
 HOMEPAGE="http://rudiments.sourceforge.net/"
@@ -11,7 +11,7 @@ SLOT="0"
 KEYWORDS="~x86 ~amd64 ~ppc"
 IUSE=""
 
-DEPEND="virtual/libc"
+DEPEND=""
 
 src_compile() {
 	econf || die
