@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/poslib
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/poslib/ChangeLog,v 1.14 2005/09/19 21:37:28 halcy0n Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/poslib/ChangeLog,v 1.15 2006/02/20 07:30:26 halcy0n Exp $
+
+  20 Feb 2006; Mark Loeser <halcy0n@gentoo.org> poslib-1.0.5.ebuild,
+  poslib-1.0.6.ebuild:
+  Remove DEPEND on virtual/libc
 
   19 Sep 2005; Mark Loeser <halcy0n@gentoo.org> metadata.xml:
   Adding to cpp herd.
