@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/rudiments
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/rudiments/ChangeLog,v 1.7 2005/09/19 21:37:58 halcy0n Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/rudiments/ChangeLog,v 1.8 2006/02/20 07:33:19 halcy0n Exp $
+
+  20 Feb 2006; Mark Loeser <halcy0n@gentoo.org> rudiments-0.26.3.ebuild,
+  rudiments-0.27.ebuild:
+  Remove DEPEND on virtual/libc
 
   19 Sep 2005; Mark Loeser <halcy0n@gentoo.org> metadata.xml:
   Adding to cpp herd.
