@@ -1,6 +1,10 @@
 # ChangeLog for dev-cpp/libbinio
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libbinio/ChangeLog,v 1.12 2006/02/19 18:30:12 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libbinio/ChangeLog,v 1.13 2006/02/20 07:26:12 halcy0n Exp $
+
+  20 Feb 2006; Mark Loeser <halcy0n@gentoo.org> libbinio-1.2.ebuild,
+  libbinio-1.3.ebuild, libbinio-1.4.ebuild:
+  Remove DEPEND on virtual/libc
 
   19 Feb 2006; Michael Hanselmann <hansmi@gentoo.org> libbinio-1.4.ebuild:
   Added to ~ppc64.
